--- a/app-muiscas/www/rondadecolores/html/estrofa1.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa1.html
@@ -11,6 +11,8 @@
 <body class="fondoestrofa1">
 <h1 id="cuchaviva" onclick="efectos('cuchaviva','cuchavivazoom')" class="cuchavivap">CUCHAVIVA</h1>
 <h1 class="estrofa2">Regalame tus colores, <br>para pintar...</h1>
+<img  class="icono izquierda" src="../imagenes/iconoatras.png">
+<img  class="icono derecha" src="../imagenes/iconoadelante.png">
 
 </body>
 
