atras adelante todas las estrofas

--- a/app-muiscas/www/rondadecolores/html/estrofa10.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa10.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-
+<img  class="icono izquierda" src="../imagenes/iconoatras.png">
+<a href="estrofa9.html">
+<img  class="icono izquierda" src="../imagenes/iconoatras.png">
+</a>
 </body>
 
 </html>
