--- a/app-muiscas/www/rondadecolores/html/estrofa2.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa2.html
@@ -11,6 +11,12 @@
 
 <body class="fondoestrofa2" >
 <h1 class="estrofa2">Madre Tierra regálame tus colores <br>para pintar...<br>Al Arcoiris...Cuchaviva</h1>
+<a href="estrofa1.html">
+<img  class="icono izquierda" src="../imagenes/iconoatras.png">
+</a>
+<a href="estrofa3.html">
+<img  class="icono derecha" src="../imagenes/iconoadelante.png">
+</a>
 </body>
 
 </html>
