--- a/app-muiscas/www/rondadecolores/html/estrofa7.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa7.html
@@ -11,6 +11,12 @@
 
 <body>
 <h1 class="estrofa7">Muyso, regálame tus colores <br>para pintar...<br>El Búho...Ezhinte</h1>
+<a href="estrofa6.html">
+<img  class="icono izquierda" src="../imagenes/iconoatras.png">
+</a>
+<a href="estrofa8.html">
+<img  class="icono derecha" src="../imagenes/iconoadelante.png">
+</a>
 </body>
 
 </html>
