--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa10.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa10.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-
+<a href="estrofa9.html">
+<img  class="icono izquierda" src="../imagenes/iconoatras.png">
+</a>
 </body>
 
 </html>
