--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa2.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa2.html
@@ -11,7 +11,12 @@
 
 <body class="fondoestrofa2" >
 <h1 class="estrofa2">Hiístcha Guaía, mbique <br>choc zbquyqua ...<br>Chuquyc, Chibchihiua </h1>
-
+<a href="estrofa1.html">
+<img  class="icono izquierda" src="../imagenes/iconoatras.png">
+</a>
+<a href="estrofa3.html">
+<img  class="icono derecha" src="../imagenes/iconoadelante.png">
+</a>
 
 </body>
 
