--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa8.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa8.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-
+<a href="estrofa7.html">
+<img  class="icono izquierda" src="../imagenes/iconoatras.png">
+</a>
+<a href="estrofa9.html">
+<img  class="icono derecha" src="../imagenes/iconoadelante.png">
+</a>
 </body>
 
 </html>
