--- a/app-muiscas/www/rondadecolores/html/estrofa5.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa5.html
@@ -11,6 +11,12 @@
 
 <body class="fondoestrofa5">
 <h1 class="estrofa5">Aso, regálame tus colores <br>para pintar...<br>Al Caballo...Hycabai</h1>
+<a href="estrofa4.html">
+<img  class="icono izquierda" src="../imagenes/iconoatras.png">
+</a>
+<a href="estrofa6.html">
+<img  class="icono derecha" src="../imagenes/iconoadelante.png">
+</a>
 </body>
 
 </html>
