--- a/app-muiscas/www/rondadecolores/html/estrofa6.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa6.html
@@ -11,6 +11,12 @@
 
 <body class="fondoestrofa6">
 <h1 class="estrofa6">Hycabai, regálame tus colores <br>para pintar...<br>la serpiente...Muyso</h1>
+<a href="estrofa5.html">
+<img  class="icono izquierda" src="../imagenes/iconoatras.png">
+</a>
+<a href="estrofa7.html">
+<img  class="icono derecha" src="../imagenes/iconoadelante.png">
+</a>
 </body>
 
 </html>
