--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa4.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa4.html
@@ -11,6 +11,12 @@
 
 <body class="fondoestrofa4">
 <h1 class="estrofa4">Quinzha, mbique <br>Choc Zbquyqua...<br>Chibchihiua...Aso</h1>
+<a href="estrofa3.html">
+<img  class="icono izquierda" src="../imagenes/iconoatras.png">
+</a>
+<a href="estrofa5.html">
+<img  class="icono derecha" src="../imagenes/iconoadelante.png">
+</a>
 </body>
 
 </html>
