--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa9.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa9.html
@@ -11,6 +11,12 @@
 
 <body>
 <h1 class="estrofa9">Cuchaviva,Qinzha, <br>Aso, Hycabai<br> Muyso, Ezhinte<br>Hiístcha Guaía, Tierra Madre<br>Hiístcha Guaía, Tierra Madre...Bis </h1>
+<a href="estrofa8.html">
+<img  class="icono izquierda" src="../imagenes/iconoatras.png">
+</a>
+<a href="estrofa10.html">
+<img  class="icono derecha" src="../imagenes/iconoadelante.png">
+</a>
 </body>
 
 </html>
