--- a/app-muiscas/www/rondadecolores/html/pagprincipal.html
+++ b/app-muiscas/www/rondadecolores/html/pagprincipal.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-
+<img  class="icono derecha" src="../imagenes/iconoadelante.png">
+<a href="iconoadelante.png"></a>
 </body>
 
 </html>
