--- a/app-muiscas/www/rondadecolores/html/estrofa3.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa3.html
@@ -12,7 +12,7 @@
 <body class="fondoestrofa3">
 <h1 class="estrofa3">Cuchaviva, regálame tus colores <br>para pintar...<br>Al Colibrí..Qinzha</h1>
 <div id="colibri" class="inicio gris">    
-	<img  class="colibrigif" onclick="efectos('colibri','colibrigif final')" src="../imagenes/colibri.gif">
+	<img  class="colibrigif" onclick="efectos('colibri','colibrigif final')" src="../imagenes/colibriderecha.gif">
 </div>
 <a href="estrofa2.html">
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
