pantalla principal aun cacharriando

--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -15,34 +15,28 @@
         </div>
 
         <div class= "cuerpo">
-            <div class="botones derechos arriba">
+            <div class="botones izquierdos arriba">
                 <a class="textoicono" href="saludos/saludos.html">
                     <img class="icono" src="img/triangulosbn.svg">
                         <p>Saludos</p>
                 </a>
             </div>
-            <div class="botones izquierdos arriba">
-                <a class="textoicono" href="mercado/mercado.html">
-                    <img class="icono" src="img/carajarronbn.svg">
-                    <p>Mercado</p>
+            <div class="botones derechos arriba">
+                <a class="textoicono" href="rondadecolores/rondadecolores.html">
+                    <img class="icono" src="img/caralineasbn.svg">
+                    <p>Ronda de colores</p>
                 </a>
             </div>
-            <div class="botones derechos">
+            <div class="botones izquierdos abajo">
                 <a class="textoicono" href="numeros/numerospr.html">
                     <img class="icono" src="img/espiralbn.svg">
-                    <p>Numeros</p>
+                    <p>Números</p>
                 </a>
             </div>
-            <div class="botones izquierdos">
+            <div class="botones derechos abajo">
                 <a class="textoicono" href="informacion/informacion.html">
                     <img class="icono" src="img/texturadobn.svg">
                     <p>Información</p>
-                </a>
-            </div>
-            <div class="botones centros">
-                <a class="textoicono" href="rondadecolores/rondadecolores.html">
-                    <img class="icono imgcentro" src="img/caralineasbn.svg">
-                    <p>Ronda de colores</p>
                 </a>
             </div>
         </div>
