arreglo pantalla principal numeros

--- a/app-muiscas/www/saludos/saludos.html
+++ b/app-muiscas/www/saludos/saludos.html
@@ -19,9 +19,8 @@
     <ul>
         <li class="titulomenu">Cartilla<br>Muysccubun<img onclick="menuc()" class="menuatras" src="../img/atrasmenu.svg"/></li>
         <li class="menuli"><a href="../index.html"> Inicio</a></li>
-        <li class="menuli"><a href="../SaludosyPresentacion/saludos.html"> Saludos y presentación</a></li>
-        <li class="menuli"><a href="../numeros/numeros.html"> Numeros</a></li>
-        <li class="menuli"><a href="../mercado/mercado.html"> Mercado</a></li>
+        <li class="menuli"><a href="../saludos/saludos.html"> Saludos y presentación</a></li>
+        <li class="menuli"><a href="../numeros/numerospr.html">Números</a></li>
         <li class="menuli"><a href="../rondadecolores/rondadecolores.html"> Ronda de colores</a></li>
         <li class="menuli"><a href="../informacion/informacion.html"> Información</a></li>
     </ul>
