--- a/app-muiscas/www/rondadecolores/html/estrofa2.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa2.html
@@ -17,8 +17,8 @@
 <a href="estrofa3.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
-<img  class="numeros" src="../../numeros/img/2.png">
-<img  class="muysccubun" src="../../rondadecolores/imagenes/ata1.png">
+
+<img  class="muysccubun" src="../../numeros/img/simbolo2.png">
 </body>
 
 </html>
