Probando html editados

--- a/app-muiscas/www/rondadecolores/html/estrofa3.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa3.html
@@ -10,16 +10,10 @@
 </head>
 
 <body class="fondoestrofa3">
-<h1 class="estrofa3">Cuchaviva, regálame tus colores <br>para pintar...<br>Al Colibrí..Qinzha</h1>
+<h1 class="estrofa3">Cuchaviva, regálame tus colores <br>para pintar...<br>Al Colibrí..Quynzha</h1>
 <div id="colibri" class="inicio gris">    
-	<img  class="colibrigif" onclick="efectos('colibri','colibrigif final')" src="../imagenes/colibriderecha.gif">
-</div>
-<a href="estrofa2.html">
-<img  class="icono izquierda" src="../imagenes/iconoatras.png">
-</a>
-<a href="estrofa4.html">
-<img  class="icono derecha" src="../imagenes/iconoadelante.png">
-</a>
+<img  class="colibrigif" onclick="efectos('colibri','colibrigif final')" src="../imagenes/colibri.gif">
+</div>    
 </body>
 
 </html>
