--- a/app-muiscas/www/rondadecolores/html/estrofa8.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa8.html
@@ -10,13 +10,7 @@
 </head>
 
 <body>
-<a href="estrofa7.html">
-<img  class="icono izquierda" src="../imagenes/iconoatras.png">
-</a>
-<a href="estrofa9.html">
-<img  class="icono derecha" src="../imagenes/iconoadelante.png">
-</a>
-
+<h1 class="estrofa8">Ezhinte, regálame tus colores <br>para pintar...<br>El Sapo...Zihita </h1>
 </body>
 
 </html>
