--- a/app-muiscas/www/rondadecolores/html/estrofa9.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa9.html
@@ -10,13 +10,7 @@
 </head>
 
 <body>
-<h1 class="estrofa9">Cuchaviva,Qinzha, <br>Aso, Hycabai<br> Muyso, Ezhinte<br>Hiístcha Guaía, Tierra Madre<br>Hiístcha Guaía, Tierra Madre...Bis </h1>
-<a href="estrofa8.html">
-<img  class="icono izquierda" src="../imagenes/iconoatras.png">
-</a>
-<a href="estrofa10.html">
-<img  class="icono derecha" src="../imagenes/iconoadelante.png">
-</a>
+<h1 class="estrofa9">Ezhinte, regálame tus colores <br>para pintar...<br>La Madre Tierra...Hiístcha Guaía </h1>
 </body>
 
 </html>
