--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa3.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa3.html
@@ -10,13 +10,8 @@
 </head>
 
 <body class="fondoestrofa3">
-<h1 class="estrofa3">Chuquy, mbique <br>Choc Zbquyqua...<br>Chibchihiua...Qinzha</h1>
-<a href="estrofa2.html">
-<img  class="icono izquierda" src="../imagenes/iconoatras.png">
-</a>
-<a href="estrofa4.html">
-<img  class="icono derecha" src="../imagenes/iconoadelante.png">
-</a>
+<h1 class="estrofa3">Chuquy, mbique <br>Choc Zbquyqua...<br>Chibchihiua...Quynzha</h1>
+
 </body>
 
 </html>
