ok arreglado sonido en ejercicios numeros

--- a/app-muiscas/www/numeros/html/numeros2.html
+++ b/app-muiscas/www/numeros/html/numeros2.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="../css/numerosxv.css">
                     <!-- Este es el css horizontal -->
         <link rel="stylesheet" media="all and (orientation:landscape)" type="text/css" href="../css/numerosxh.css">
-        <script src="../../js/index.js" type="text/javascript"></script>
+        <script src="../js/numeros.js" type="text/javascript"></script>
         <title>Numeros Menu 1 a 10</title>
     </head>
    
