--- a/app-muiscas/www/numeros/html/informacion.html
+++ b/app-muiscas/www/numeros/html/informacion.html
@@ -17,9 +17,9 @@
 <nav id="menu" class="invisible">
         <ul>
             <li class="titulomenu">Cartilla<br>Muysccubun<img onclick="menuc()" class="menuatras" src="../img/atrasmenu.svg"/></li>
-            <li class="menuli"><a href="../index.html"> Inicio</a></li>
-            <li class="menuli"><a href="../saludos/saludos.html"> Saludos y presentación</a></li>
-            <li class="menuli"><a href="../numeros/numerospr.html"> Números</a></li>
+            <li class="menuli"><a href="../../index.html"> Inicio</a></li>
+            <li class="menuli"><a href="../../saludos/saludos.html"> Saludos y presentación</a></li>
+            <li class="menuli"><a href="../../numeros/numerospr.html"> Números</a></li>
             <li class="menuli"><a href="../rondadecolores/rondadecolores.html"> Ronda de colores</a></li>
             <li class="menuli"><a href="../informacion/informacion.html"> Información</a></li>
         </ul>
