--- a/app-muiscas/www/numeros/html/numeros.html
+++ b/app-muiscas/www/numeros/html/numeros.html
@@ -4,33 +4,34 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, maximum-scale=2">
                     <!-- Esté es el css del menu -->
-        <link rel="stylesheet" type="text/css" href="../css/menu.css">
+        <link rel="stylesheet" type="text/css" href="../../css/menu.css">
                     <!-- Esté es el css vertical -->
-        <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="css/numerosxv.css">
+        <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="../css/numerosxv.css">
                     <!-- Este es el css horizontal -->
-        <link rel="stylesheet" media="all and (orientation:landscape)" type="text/css" href="css/numerosxh.css">
-        <script src="../js/index.js" type="text/javascript"></script>
+        <link rel="stylesheet" media="all and (orientation:landscape)" type="text/css" href="../css/numerosxh.css">
+        <script src="../js/numeros.js" type="text/javascript"></script>
+        <script src="../../js/index.js" type="text/javascript"></script>
         <title>Numeros</title>
     </head>
 <body>
 <!--  menu    -->
 <nav id="menu" class="invisible">
         <ul>
-            <li class="titulomenu">Cartilla<br>Muysccubun<img onclick="menuc()" class="menuatras" src="../img/atrasmenu.svg"/></li>
-            <li class="menuli"><a href="../index.html"> Inicio</a></li>
-            <li class="menuli"><a href="../saludos/saludos.html"> Saludos y presentación</a></li>
-            <li class="menuli"><a href="../numeros/numerospr.html"> Números</a></li>
+            <li class="titulomenu">Cartilla<br>Muysccubun<img onclick="menuc()" class="menuatras" src="../../img/atrasmenu.svg"/></li>
+            <li class="menuli"><a href="../../index.html"> Inicio</a></li>
+            <li class="menuli"><a href="../../saludos/saludos.html"> Saludos y presentación</a></li>
+            <li class="menuli"><a href="../../numeros/numerospr.html"> Números</a></li>
             <li class="menuli"><a href="../rondadecolores/rondadecolores.html"> Ronda de colores</a></li>
             <li class="menuli"><a href="../informacion/informacion.html"> Información</a></li>
         </ul>
     </nav>
 
         <div  class= "cabecera">
-            <img class="logo" onclick="menu('#1AB1E1')" src="../img/menu.svg">
+            <img class="logo" onclick="menu('#1AB1E1')" src="../../img/menu.svg">
             <p class = "titulo">Numeros</p>
         </div>
 
-<!-- fin del menu    -->
+<!-- fin del menu    -->  
 
 
 
