--- a/app-muiscas/www/numeros/html/numeros.html
+++ b/app-muiscas/www/numeros/html/numeros.html
@@ -14,7 +14,7 @@
         <title>Numeros1al10</title>
 </head>
 <body>
-<div class="montrasnumeros">
+<div class="mostrarnumeros">
     <h1 id="h1js"> </h1>
 </div>
 <div class="cuerponumeros">
