boton atras en numeros

--- a/app-muiscas/www/numeros/html/numeros2.html
+++ b/app-muiscas/www/numeros/html/numeros2.html
@@ -15,6 +15,9 @@
     </head>
 <body>
 <div class="mostrarnumeros">
+    <a href="../numerospr.html">
+    <img class="atrasnumeros" src="../../img/atrasmenu.svg">
+    </a>
     <h1 id="h1js"> </h1>
 </div>
 <div class="cuerponumeros">
