--- a/app-muiscas/www/saludos/html/choa.html
+++ b/app-muiscas/www/saludos/html/choa.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
 <body>
 <div   class= "cabecera">
     <a href="../saludos.html">
-        <img class="atras" src="../imagenes/chatatras.svg">
+        <img class="atras" src="../../img/atrasmenu.svg">
     </a>
     <img class="logopersona" src="../imagenes/chathombre.svg">
     <p class ="titulo">Carlos Fiquitiva</p>
