--- a/app-muiscas/www/numeros/html/ejercicios.html
+++ b/app-muiscas/www/numeros/html/ejercicios.html
@@ -28,6 +28,7 @@
     <input id="getexto" onkeyup="quiz(ejercicios,respuestas,event)" class="inputexto" type="text"></textarea>
     <p id="boton" onclick="quiz(ejercicios,respuestas,event)" class="enter">&#8592;<p>
 </div>
+<!-- hola -->
 <audio id="pista1" src="../audio/ata.ogg" preload="auto" type="audio/ogg"></audio>
 <audio id="pista2" src="../audio/boza.ogg" preload="auto" type="audio/ogg"></audio>
 <audio id="pista3" src="../audio/mica.ogg" preload="auto" type="audio/ogg"></audio>
