ajustando cabecera informacion autorizado por Carlos R

--- a/app-muiscas/www/numeros/html/informacion.html
+++ b/app-muiscas/www/numeros/html/informacion.html
@@ -14,11 +14,11 @@
         <title>Informacion</title>
 </head>
 <body>
-<div class="mostrarnumeros">
+<div class="cabecerainfo">
     <a href="../numerospr.html">
-    <img class="atrasnumeros" src="../../img/atrasmenu.svg">
+    <img class="atrasmenu" src="../../img/atrasmenu.svg">
     </a>
-    <h1 id="h1js"> </h1>
+    <h1 id="titulotunjo"> Sabias que?</h1>
 </div>
 
 <div class = "tunjocuerpo" >
