agrgando textos y link de saludos a panatallas html explicativas

--- a/app-muiscas/www/saludos/html/otros-saludos.html
+++ b/app-muiscas/www/saludos/html/otros-saludos.html
@@ -31,7 +31,14 @@
         <p>Chibusgua: Usado para llamar y saludar a varios, a un grupo de personas</p>
         <p>Guaza: usado para saludar y llamar a un joven, sifnifica "Hola, Joven"</p>
         <p>Haco umzone: Significa " Como estas?"</p>
-        
+        <p>Tyba: Usado para llamar y saludar a un compa;ero, amigo o compadre, significa "Hola, compañero"</p>
+        <h3><p>Reconstruccion desde el español</p></h3>
+        <p>Chogue sua "Buen dia"</p>
+        <p>Chogue sua meca significa: "Buen dia" en la tarde</p>
+        <p>Chogue sua coca significa: "Buen dia" en la mañana</p>
+        <p>Sua choc aguene:mediante este saludo se pregunta a alguien si esta pasando un buen dia.</p>
+        <p>Za choz aguenua:mediante este saludo se pregunta a alguien si esta pasando una buena nache</p>
+        <p>Za choz aguene:respuesta a "za choc aguenua" con la que alguien afirma que esta pasando una buena noche</p>
 	</div>
 
 </div>
