imágenes de ronda de colores

--- a/app-muiscas/www/saludos/saludos.html
+++ b/app-muiscas/www/saludos/saludos.html
@@ -46,7 +46,7 @@
         <div class="burbuja derecha">
             <img class="imgaudio" src="../img/caracola.png">
                 <div class="contexto">
-                    <a class="texto" href="#">Chogue</a>
+                    <a class="texto" href="html/choa.htmlh">Chogue</a>
                 </div>
         </div>
         <img class="caras" src="imagenes/chatmujer.svg">
@@ -55,16 +55,16 @@
         <img class="caras" src="imagenes/chathombre.svg">
         <div class="burbuja izquierda">
             <div class="contexto">
-                <a class="texto" href="#">Muaz choa umzone</a>
+                <a class="texto" href="html/resaludacion.html">Muaz choa umzone</a>
             </div>
             <img class="imgaudio" src="../img/caracola.png">
         </div>
     </div>
-    <div class="contderecha">
-        <div class="burbuja derecha">
+    <div class="contizquierda">
+        <div class="burbuja izquierda">
             <img class="imgaudio" src="../img/caracola.png">
                 <div class="contexto">
-                    <a class="texto" href="#">Ehe</a>
+                    <a class="texto" href="html/presentacion.html">Zehyca Fernando Fiquitiva gue nga cha Suba gue<>
                 </div>
         </div>
         <img class="caras" src="imagenes/chatmujer.svg">
