--- a/app-muiscas/www/rondadecolores/html/estrofa1.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa1.html
@@ -11,13 +11,16 @@
 <body class="fondoestrofa1">
 <h1 id="cuchaviva" onclick="efectos('cuchaviva','cuchavivazoom')" class="cuchavivap">CUCHAVIVA</h1>
 <h1 class="estrofa2">Regalame tus colores, <br>para pintar...</h1>
-<<<<<<< HEAD
 <a href="estrofa2.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
-</a>
+<div>
+    <img  class="niña" src="../imagenes/iconoadelante.png">
+    <img  class="planeta" src="../imagenes/iconoadelante.png">   
+    <img  class="planeta" src="../imagenes/iconoadelante.png">
 
-=======
->>>>>>> 4590d9f2735328b1ad1487e6b3005879cddf3b49
+    </div>
+
+</a>
 
 </body>
 
