--- a/app-muiscas/www/saludos/saludos.html
+++ b/app-muiscas/www/saludos/saludos.html
@@ -47,11 +47,7 @@
         <div class="burbuja derecha">
             <img class="imgaudio" src="../img/caracola.png" onclick="digito('pista2')">
                 <div class="contexto">
-<<<<<<< HEAD
-                    <a class="texto" href="html/choa.htmlh">Chogue</a>
-=======
                     <a class="texto" href="html/otros-saludos.html">Chogue</a>
->>>>>>> 00dc4b9ca82a764db4e702288dc6f9288959baa6
                 </div>
         </div>
         <img class="caras" src="imagenes/chathombre.svg">
@@ -60,28 +56,16 @@
         <img class="caras" src="imagenes/chatmujer.svg">
         <div class="burbuja izquierda">
             <div class="contexto">
-<<<<<<< HEAD
-                <a class="texto" href="html/resaludacion.html">Muaz choa umzone</a>
-=======
                 <a class="texto" href="html/resaludaciones.html">Muaz choa umzone</a>
->>>>>>> 00dc4b9ca82a764db4e702288dc6f9288959baa6
             </div>
             <img class="imgaudio" src="../img/caracola.png" onclick="digito('pista3')">
         </div>
     </div>
-<<<<<<< HEAD
-    <div class="contizquierda">
-        <div class="burbuja izquierda">
-            <img class="imgaudio" src="../img/caracola.png">
-                <div class="contexto">
-                    <a class="texto" href="html/presentacion.html">Zehyca Fernando Fiquitiva gue nga cha Suba gue<>
-=======
     <div class="contderecha">
         <div class="burbuja derecha">
             <img class="imgaudio" src="../img/caracola.png"onclick="digito('pista4')">
                 <div class="contexto">
                     <a class="texto" href="html/presentacion.html">Zehyca Fernando Fiquitiva gue nga cha Suba gue</a>
->>>>>>> 00dc4b9ca82a764db4e702288dc6f9288959baa6
                 </div>
         </div>
         <img class="caras" src="imagenes/chathombre.svg">
@@ -173,7 +157,7 @@
 <br>
     <div id="enun" class="cambio">
         <p class="enunciado">Responde la conversación en el chat, solo puedes equivocarte tres veces</p>
-        <p class="opciones" onclick="cambiarpantalla('secundario','ejercicio','principal','cuerpo')">Atras</p>
+        <p class="opciones"  onclick="cambiarpantalla('secundario','ejercicio','principal','cuerpo')">Atras</p>
 <!--    la funcion comenzar inicia los ejercicios pide dos cosas: el elemento con id enun que desaparese, ahí va el enunciado y esta en el html, y el primer grupo de preguntas, este no va en comillas por que esta en el js-->
         <p class="opciones" onclick="comenzar('enun',preguntas1)">Comenzar<p>
     </div>
@@ -184,23 +168,17 @@
     </div>
 </div>
 
- <audio id="pista1" src="audio/pantallauno/choa.ogg" preload="auto" type="audio/ogg"></audio>
-<audio id="pista2" src="audio/pantallauno/chogue.ogg" preload="auto" type="audio/ogg"></audio>
-    <audio id="pista3" src="audio/pantallauno/muaz%20choa%20umzone.ogg" preload="auto" type="audio/ogg"></audio>
-    <audio id="pista4" src="audio/pantallauno/zehycafernadofiquitivague.ogg" preload="auto" type="audio/ogg"></audio>
-    <audio id="pista5" src="audio/pantallauno/zehycadianagaribello.ogg" preload="auto" type="audio/ogg"></audio>
-    <audio id="pista6" src="audio/pantallauno/ipquaahyca.ogg" preload="auto" type="audio/ogg"></audio>
-    <audio id="pista7" src="audio/pantallauno/juangaribellogue.ogg" preload="auto" type="audio/ogg"></audio>
-    <audio id="pista8" src="audio/pantallauno/ipcuazeguaquenzinga.ogg" preload="auto" type="audio/ogg"></audio>
-    <audio id="pista9" src="audio/pantallauno/ipquaahyca2.ogg" preload="auto" type="audio/ogg"></audio>
-    <audio id="pista10" src="audio/pantallauno/carlosfiquitivague.ogg" preload="auto" type="audio/ogg"></audio>
-    <audio id="pista11" src="audio/pantallauno/ipquamisichasqua.ogg" preload="auto" type="audio/ogg"></audio>
-    <audio id="pista12" src="audio/pantallauno/miisichasqua.ogg" preload="auto" type="audio/ogg"></audio>
-
-
-
-
-
-
-    </body>
+ <audio id="pista1" src="audio/choa.ogg" preload="auto" type="audio/ogg"></audio>
+<audio id="pista2" src="audio/chogue.ogg" preload="auto" type="audio/ogg"></audio>
+    <audio id="pista3" src="audio/muaz%20choa%20umzone.ogg" preload="auto" type="audio/ogg"></audio>
+    <audio id="pista4" src="audio/zehycafernadofiquitivague.ogg" preload="auto" type="audio/ogg"></audio>
+    <audio id="pista5" src="audio/zehycadianagaribello.ogg" preload="auto" type="audio/ogg"></audio>
+    <audio id="pista6" src="audio/ipquaahyca.ogg" preload="auto" type="audio/ogg"></audio>
+    <audio id="pista7" src="audio/juangaribellogue.ogg" preload="auto" type="audio/ogg"></audio>
+    <audio id="pista8" src="audio/ipcuazeguaquenzinga.ogg" preload="auto" type="audio/ogg"></audio>
+    <audio id="pista9" src="audio/ipquaahyca2.ogg" preload="auto" type="audio/ogg"></audio>
+    <audio id="pista10" src="audio/carlosfiquitivague.ogg" preload="auto" type="audio/ogg"></audio>
+    <audio id="pista11" src="audio/ipquamisichasqua.ogg" preload="auto" type="audio/ogg"></audio>
+    <audio id="pista12" src="audio/miisichasqua.ogg" preload="auto" type="audio/ogg"></audio>
+</body>
 </html>
